--- a/packages/rocketchat-message-snippet/client/tabBar/views/snippetedMessages.html
+++ b/packages/rocketchat-message-snippet/client/tabBar/views/snippetedMessages.html
@@ -1,24 +1,13 @@
 <template name="snippetedMessages">
 	<div class="list-view snippeted-messages-list flex-tab__header">
 		<div class="title">
-			<h2>{{_ "Snippet_Messages"}}</h2>
+			<h2>{{_ "Tweets"}}</h2>
 		</div>
 		{{#if Template.subscriptionsReady}}
 			{{#unless hasMessages}}
-				<h2>{{_ "No_snippet_messages"}}</h2>
 			{{/unless}}
 		{{/if}}
 	</div>
-	<div class="flex-tab__result js-list">
-		<ul class="list clearfix">
-			{{#each messages}}
-				{{#nrr nrrargs 'message' message}}{{/nrr}}
-			{{/each}}
-		</ul>
-		{{#if hasMore}}
-		<div class="load-more">
-			{{> loading}}
-		</div>
-		{{/if}}
+<a class="twitter-timeline" data-width="350" data-theme="light" href="https://twitter.com/divergefx/lists/website?ref_src=twsrc%5Etfw">A Twitter List by divergefx</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
 </template>
