--- a/packages/rocketchat-message-snippet/client/tabBar/views/snippetedMessages.html
+++ b/packages/rocketchat-message-snippet/client/tabBar/views/snippetedMessages.html
@@ -1,5 +1,5 @@
 <template name="snippetedMessages">
 	<div class="flex-tab__result js-list">
-		<a class="twitter-timeline" data-width="350" data-theme="light" href="https://twitter.com/divergefx/lists/divergefx?ref_src=twsrc%5Etfw">A Twitter List by divergefx</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<a class="twitter-timeline" data-width="350" data-theme="light" href="https://twitter.com/divergefx/lists/divergefx?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
 </template>
